# MysqlConn

./: .gitignore  CMakeLists.txt  MysqlConn.sln  README.md
Jsoncpp/lib/: jsoncpp.lib
Mysql/lib/: mysqlservices.lib
MysqlConn/: MysqlConfig.cpp  MysqlConn.cpp  MysqlConn.h  MysqlConn.vcxproj  MysqlConn.vcxproj.filters  MysqlConnPool.cpp  MysqlConnPool.h  MysqlOP.cpp  MysqlOP.h  dbConfig.json  main.cpp
MysqlConn/include/: MysqlConfig.h  MysqlConn.h  MysqlConnPool.h  MysqlOP.h
MysqlConn/src/: MysqlConfig.cpp  MysqlConn.cpp  MysqlConnPool.cpp  MysqlOP.cpp
